--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -13,6 +13,10 @@ button {
     outline: none!important;
 }
 
+.fa-arrow-up {
+    z-index: 99999999;
+}
+
 a:hover {
     text-decoration: none;
     cursor: pointer;
@@ -23,7 +27,7 @@ a:hover {
     top: 0;
     bottom: 0;
     width: 100%;
-    z-index: 100000;
+    z-index: 1000;
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
 }
 
@@ -520,7 +524,7 @@ button {
     bottom: 20px;
     right: 20px;
     opacity: 0;
-    z-index: 500;
+    z-index: 999999999;
     transition: all .3s ease-in-out;
 }
 
