--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -546,6 +546,7 @@ a[data-lightbox] {
 a[data-lightbox]:hover::before {
     content: "+";
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
+    font-display: swap;
     font-size: 32px;
     width: 50px;
     height: 50px;
@@ -659,6 +660,7 @@ a {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+    font-display: swap;
 }
 
 .container {
@@ -711,6 +713,7 @@ p {
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
+    font-display: swap;
 }
 
 .cta-hero {
