fix height and width of img

--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -528,6 +528,11 @@ button {
     transition: all .3s ease-in-out;
 }
 
+.img-responsive {
+    height: auto;
+    width: auto;
+}
+
 .scrollToTop span {
     margin-top: 6px;
 }
