change color to fix accessibility

--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -802,15 +802,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #F4A681;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #F4A681!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #F4A681;
     color: #FFFFFF!important;
 }
 
@@ -828,7 +828,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #F4A681!important;
 }
 
 .ltc-atomic-tangerine:hover {
