--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -137,7 +137,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: black;
 }
 
 .d-bloc .a-btn:hover,
@@ -298,6 +298,7 @@ a:hover {
 
 .col-sm-4 {
     line-height: 30px;
+    color: #000000;
 }
 
 .navbar-brand {
@@ -664,7 +665,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black!important;
     font-display: swap;
 }
 
