fix color page 2

--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -812,7 +812,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F4A681;
-    color: #FFFFFF!important;
+    color: black!important;
 }
 
 .btn-atomic-tangerine:hover {
