--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -917,6 +917,9 @@ h4 {
 }
 
 @media (max-width: 767px) {
+    .font-size__20 {
+        width: auto;
+    }
     .page-container {
         overflow-x: hidden;
         position: relative;
