--- a/la_panthere/style.css
+++ b/la_panthere/style.css
@@ -552,7 +552,6 @@ a[data-lightbox] {
 a[data-lightbox]:hover::before {
     content: "+";
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
-    font-display: swap;
     font-size: 32px;
     width: 50px;
     height: 50px;
@@ -666,7 +665,6 @@ a {
     font-family: "helvetica";
     font-weight: 400;
     color: black!important;
-    font-display: swap;
 }
 
 .container {
@@ -719,7 +717,6 @@ p {
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
-    font-display: swap;
 }
 
 .cta-hero {
@@ -897,6 +894,10 @@ h4 {
     }
 }
 
+.cover{
+    width: 100%;
+    object-fit: cover;
+}
 @media (max-width: 991px) {
     .container {
         width: 100%;
